<resources>
    <string name="app_name">SMSpammer</string>

    <string name="title_activity_contacts_selection">ContactsSelectionActivity</string>
    <string name="title_activity_saved_messages">Saved Messages</string>
    <string name="title_activity_add_new_messages_with_category">Add new category</string>
    <string name="title_activity_edit_saved_messages_with_category">Edit Category</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="single_number">%1$d</string>
    <string name="string_space_string">%1$s %2$s</string>

    <string name="number_of_messages_prompt">Choose # of Messages</string>
    <string name="phone_number_label">Phone Number:</string>
    <string name="contact_name_label">Name:</string>

    <string-array name="number_of_messages_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
    </string-array>

    <string name="contact_details">Contact Details</string>
    <string name="number_of_messages">Number of Messages</string>
    <string name="messages">Messages</string>
    <string name="message">Message</string>
    <string name="add">Add</string>
    <string name="no_msgs_to_send">You need to provide at least one message with content</string>
    <string name="category_is_empty">You need to provide the category name</string>
    <string name="no_content_in_the_msg">Add some content to the message</string>
    <string name="insert">Insert</string>
    <string name="no_contact_selected">Need to choose a contact</string>
    <string name="choose">Choose</string>
    <string name="action_save_this_data">Save This Data</string>
    <string name="category">Category</string>
    <string name="saved_categories">Saved Categories</string>
    <string name="add_new_category">Add New Category</string>
    <string name="nav_drawer_title">@string/app_name</string>
    <string name="nav_drawer_subtitle">**In Clean Code we Trust**</string>
    <string name="logo_credit">Logo made by Freepik from www.flaticon.com </string>
    <string name="app_made_by">Made by Kyriakos Alexandrou</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="home">Home</string>
    <string name="ok">OK</string>
    <string name="confirmation_before_sending_sms">Have in mind there might be charges from the provider!! SMSpammer brings no responsibilities</string>
    <string name="confirmation_before_sending_sms_title">Are you sure??</string>
    <string name="cancel">Cancel</string>
    <string name="share">Share Github project</string>
    <string name="open_github_page">Open Project on Github</string>
    <string name="share_using">\@string/app_name</string>
    <string name="permission_contact_not_granded">Contact permission was NOT granted, Without this permission SMSs cannot be send!!</string>
    <string name="share_msg_content">SMSpammer - send messages in a cool way https://github.com/KyriakosAlexandrou/SMSpammer</string>
    <string name="rating_and_giving_feedback_is_very_appreciated">Sharing is caring</string>
</resources>
