<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/contact_title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/contact_title"
            style="@style/Text.Title.Bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/choose_contact_btn"
            android:layout_toStartOf="@+id/choose_contact_btn"
            android:gravity="center_horizontal"
            android:text="@string/contact_details" />

        <ImageView
            android:id="@id/choose_contact_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@android:drawable/ic_menu_edit" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Text.Content.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact_name_label" />

        <TextView
            android:id="@+id/contact_name_value"
            style="@style/Text.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Alexis" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Text.Content.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label" />

        <TextView
            android:id="@+id/contact_phone_number_value"
            style="@style/Text.Content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="07546546456" />
    </LinearLayout>
</LinearLayout>